--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         
                     </ul>
                 </div>
+                <img src="icons8-bar-67.png" class="icon" alt="">
             </nav>
 
                 <div class="hero">
