finished the menu functonality

--- a/index.html
+++ b/index.html
@@ -40,12 +40,31 @@
 
                     </ul>
                 </div>
-                <img src="icons8-bar-67.png" class="icon" alt="">
+                <img src="icons8-bar-67.png" class="icon" id="menu" alt="">
             </nav>
 
             <div class="hero">
                 <h1><a href="#">Beauty & Cosmetic <br> Products</a></h1>
             </div>
+        </div>
+
+        <!-- Overlay -->
+        <div class="overlay"></div>
+
+        <!-- Navigation Sidebar -->
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <h2>Vim</h2>
+                <button class="close-btn">&times;</button>
+            </div>
+            <nav class="sidebar-nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
 
         <div class="section1">
@@ -187,5 +206,7 @@
 
     </main>
 </body>
+
+<script src="index.js"> </script>
 
 </html>
